--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 layout: default
 title: "Home"
 ---
+![50377865_00101_0276_Large](https://github.com/PingpingL/PingpingL.github.io/assets/118013785/b111419e-70e8-4e1f-9e75-2472adbd56b1)
 
-{% if site.show_excerpts %}
-  {% include home.html %}
-{% else %}
-  {% include archive.html title="Posts" %}
-{% endif %}
+  
+Welcome to my personal website, a hub where I showcase my passion for engineering and innovative projects. 
+
+As a recent Master's graduate in Mechanical Engineering from Northeastern University, I've fostered a keen interest in mobile robotics, control systems, and signal   processing. 
+
+This space offers an insight into the breadth of my academic pursuits and project work, highlighting my commitment to the dynamic world of engineering. If my work   piques your interest or you see potential for collaboration, I warmly invite you to reach out. Together, we can navigate this exciting journey and contribute to     engineering the future.
