--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: default
 title: "Home"
 ---
 ![50377865_00101_0276_Large](https://github.com/PingpingL/PingpingL.github.io/assets/118013785/b111419e-70e8-4e1f-9e75-2472adbd56b1)
