--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
-layout: default
+layout: page
 title: "Home"
 ---
 
 
-  
 Welcome to my personal website, a hub where I showcase my passion for engineering and innovative projects. 
 
 As a recent Master's graduate in Mechanical Engineering from Northeastern University, I've fostered a keen interest in mobile robotics, control systems, and signal   processing. 
