--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Home"
 ---
-
+<img src="picture/50377865_00101_0276_Large.jpg" alt="Description of image" width="600">
 
 Welcome to my personal website, a hub where I showcase my passion for engineering and innovative projects. 
 
